--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97d671">  <td>24/03/12 19:56:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddOneRandomItem.AddOneRandomItemToThecart()[pri:0, instance:AddOneRandomItem@54c62d71]">AddOneRandomItemToThecart</td> 
-  <td>main@859690270</td>   <td></td> </tr>
-<tr bgcolor="97d671">  <td>24/03/12 19:56:02</td>   <td>-26881</td> <td>&nbsp;</td><td title="&gt;&gt;AddOneRandomItem.mySetup()[pri:0, instance:AddOneRandomItem@54c62d71]">&gt;&gt;mySetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@859690270</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/03/14 00:02:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddOneRandomItem.AddOneRandomItemToThecart()[pri:1, instance:AddOneRandomItem@65045a87]">AddOneRandomItemToThecart</td> 
+  <td>main@1896552614</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/03/14 00:02:17</td>   <td>9176</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddOneRandomItem.CheckOutProcess()[pri:2, instance:AddOneRandomItem@65045a87]">CheckOutProcess</td> 
+  <td>main@1896552614</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/03/14 00:02:27</td>   <td>19726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddOneRandomItem.SignupProcess()[pri:3, instance:AddOneRandomItem@65045a87]">SignupProcess</td> 
+  <td>main@1896552614</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/03/14 00:01:56</td>   <td>-11024</td> <td>&nbsp;</td><td title="&gt;&gt;AddOneRandomItem.mySetup()[pri:0, instance:AddOneRandomItem@65045a87]">&gt;&gt;mySetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1896552614</td>   <td></td> </tr>
 </table>
