--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,4 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>AddOneRandomItem.CheckOutProcess<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Second Test</i></td></tr>
+<tr><td>AddOneRandomItem.SignupProcess</td></tr>
 </table>
